# RADio-

./: .gitignore  DiversityMetric.py  README.md  diversity.ipynb  functions.py  pyproject.toml  requirements.txt
RADio/: distributions.py  divergence.py  functions.py  metric.py  visualize.py
data/: recommendations_sample.json
examples/radio/: diversity.ipynb  functions.py  visualize.py
examples/radio/data/: news_sample.tsv  recommendations_sample.json
src/normative_diversity/RADio/: distributions.py  divergence.py  functions.py  metric.py  visualize.py
tests/: test_radio.py
