[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "normative_diversity"
version = "0.0.2"

description = "Fundamental package for beyond-accuracy in Python"
authors = [{ name = "Sanne Vrijenhoek", email = "s.vrijenhoek@uva.nl" }]
maintainers = [
    { name = "Johannes Kruse", email = "johannes-kruse@hotmail.com" },
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["numpy>2.0,<3.0", "scikit_learn==1.5.1", "scipy==1.14.1"]

[project.urls]
# homepage = ""
# documentation = ""
source = "https://github.com/svrijenhoek/RADio-"
tracker = "https://github.com/svrijenhoek/RADio-/issues"
download = "https://pypi.org/project/normative-diversity/#files"


[project.optional-dependencies]
# pip install ".[test]"
test = ["pytest"]
examples = [
    "nltk==3.8.1",
    "pandas>=2.0.0",
    "plotly==5.23.0",
    "seaborn==0.13.2",
    "tqdm==4.65.0",
    "nbformat>=4.2.0",
]
